--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
         "@ionic/storage": "2.2.0",
         "angularfire2": "^5.2.1",
         "angularx-qrcode": "^1.0.3",
-        "cordova-ios": "6.2.0",
         "cordova-plugin-device": "2.0.3",
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
@@ -56,6 +55,7 @@
         "@ionic/app-scripts": "3.2.4",
         "@types/node": "10.1.4",
         "cordova-android": "^9.1.0",
+        "cordova-ios": "^6.2.0",
         "cordova-plugin-camera": "^5.0.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
@@ -63,7 +63,6 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-statusbar": "^2.4.2",
         "cordova-plugin-stripe": "^1.5.3",
-        "cordova-plugin-telerik-imagepicker": "git+https://github.com/dhavalsoni2001/ImagePicker.git",
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.5",
         "ionic2-zoom-area": "^1.0.16",
@@ -88,14 +87,13 @@
             "phonegap-plugin-barcodescanner": {
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
-            "telerik-imagepicker": {},
             "cordova-plugin-camera": {
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             }
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
