--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
             }
         },
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
