--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
         "cordova-plugin-whitelist": "1.3.5",
-        "firebase": "^6.1.1",
+        "firebase": "7.24.0",
         "ionic-angular": "3.9.9",
         "ionic-selectable": "^3.5.0",
         "ionicons": "3.0.0",
@@ -69,7 +69,7 @@
         "ionicons": "3.0.0",
         "moment": "^2.24.0",
         "phonegap-plugin-barcodescanner": "^8.1.0",
-        "typescript": "~2.6.2",
+        "typescript": "2.8.1",
         "ws": "3.3.2"
     },
     "description": "An Ionic project",
