--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@ionic-native/clipboard": "^4.20.0",
         "@ionic-native/contacts": "^4.20.0",
         "@ionic-native/core": "4.20.0",
+        "@ionic-native/device": "^4.20.0",
         "@ionic-native/facebook": "^4.20.0",
+        "@ionic-native/fcm": "^4.20.0",
         "@ionic-native/image-picker": "^4.20.0",
         "@ionic-native/onesignal": "^4.20.0",
         "@ionic-native/sms": "^4.20.0",
@@ -56,8 +58,11 @@
         "@types/node": "10.1.4",
         "cordova-android": "^9.1.0",
         "cordova-ios": "^6.2.0",
+        "cordova-plugin-androidx": "^3.0.0",
+        "cordova-plugin-androidx-adapter": "^1.1.3",
         "cordova-plugin-camera": "^5.0.3",
         "cordova-plugin-device": "^2.0.2",
+        "cordova-plugin-fcm-with-dependecy-updated": "^7.0.10",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.2.1",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -89,11 +94,19 @@
             },
             "cordova-plugin-camera": {
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
-            }
+            },
+            "cordova-plugin-fcm-with-dependecy-updated": {
+                "ANDROID_FCM_VERSION": "19.0.0",
+                "ANDROID_GRADLE_TOOLS_VERSION": "3.5.3",
+                "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.3",
+                "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher"
+            },
+            "cordova-plugin-androidx": {},
+            "cordova-plugin-androidx-adapter": {}
         },
         "platforms": [
-            "android",
-            "ios"
+            "ios",
+            "android"
         ]
     }
 }
