--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@angular/platform-browser-dynamic": "5.2.11",
         "@ionic-native/barcode-scanner": "^4.20.0",
         "@ionic-native/camera": "^4.20.0",
-        "@ionic-native/clipboard": "^4.20.0",
         "@ionic-native/contacts": "^4.20.0",
         "@ionic-native/core": "4.20.0",
         "@ionic-native/device": "^4.20.0",
@@ -47,6 +46,7 @@
         "ionic-angular": "3.9.9",
         "ionic-selectable": "^3.5.0",
         "ionicons": "3.0.0",
+        "ngx-clipboard": "^10.0.0",
         "promise-polyfill": "^8.2.0",
         "rxjs": "6.3.3",
         "rxjs-compat": "6.3.3",
