--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@ionic/storage": "2.2.0",
         "angularfire2": "^5.2.1",
         "angularx-qrcode": "^1.0.3",
+        "cordova-ios": "6.2.0",
         "cordova-plugin-device": "2.0.3",
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
@@ -57,7 +58,6 @@
         "@ionic/app-scripts": "3.2.4",
         "@types/node": "10.1.4",
         "cordova-android": "^9.1.0",
-        "cordova-ios": "^6.2.0",
         "cordova-plugin-androidx": "^3.0.0",
         "cordova-plugin-androidx-adapter": "^1.1.3",
         "cordova-plugin-camera": "^5.0.3",
@@ -105,8 +105,8 @@
             "cordova-plugin-androidx-adapter": {}
         },
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ]
     }
 }
