--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "@ionic/storage": "2.2.0",
         "angularfire2": "^5.2.1",
         "angularx-qrcode": "^1.0.3",
-        "cordova-ios": "6.2.0",
         "cordova-plugin-device": "2.0.3",
         "cordova-plugin-splashscreen": "5.0.4",
         "cordova-plugin-statusbar": "2.4.3",
@@ -58,11 +57,12 @@
         "@ionic/app-scripts": "3.2.4",
         "@types/node": "10.1.4",
         "cordova-android": "^9.1.0",
+        "cordova-ios": "^6.2.0",
         "cordova-plugin-androidx": "^3.0.0",
         "cordova-plugin-androidx-adapter": "^1.1.3",
         "cordova-plugin-camera": "^5.0.3",
         "cordova-plugin-device": "^2.0.2",
-        "cordova-plugin-fcm-with-dependecy-updated": "^7.0.10",
+        "cordova-plugin-fcm-with-dependecy-updated": "^7.8.0",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.2.1",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -95,14 +95,11 @@
             "cordova-plugin-camera": {
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
-            "cordova-plugin-fcm-with-dependecy-updated": {
-                "ANDROID_FCM_VERSION": "19.0.0",
-                "ANDROID_GRADLE_TOOLS_VERSION": "3.5.3",
-                "ANDROID_GOOGLE_SERVICES_VERSION": "4.3.3",
-                "ANDROID_DEFAULT_NOTIFICATION_ICON": "@mipmap/ic_launcher"
-            },
             "cordova-plugin-androidx": {},
-            "cordova-plugin-androidx-adapter": {}
+            "cordova-plugin-androidx-adapter": {},
+            "cordova-plugin-fcm-with-dependecy-updated": {
+                "IOS_FIREBASE_MESSAGING_VERSION": "~> 7.4.0"
+            }
         },
         "platforms": [
             "android",
