--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@ionic-native/device": "^4.20.0",
         "@ionic-native/facebook": "^4.20.0",
         "@ionic-native/fcm": "^4.20.0",
+        "@ionic-native/file": "^4.20.0",
+        "@ionic-native/file-opener": "^4.20.0",
         "@ionic-native/image-picker": "^4.20.0",
         "@ionic-native/onesignal": "^4.20.0",
         "@ionic-native/sms": "^4.20.0",
@@ -36,6 +38,7 @@
         "@ionic-native/status-bar": "4.20.0",
         "@ionic-native/stripe": "^4.20.0",
         "@ionic/storage": "2.2.0",
+        "@types/jspdf": "^2.0.0",
         "angularfire2": "^5.2.1",
         "angularx-qrcode": "^1.0.3",
         "cordova-plugin-device": "2.0.3",
@@ -43,9 +46,13 @@
         "cordova-plugin-statusbar": "2.4.3",
         "cordova-plugin-whitelist": "1.3.5",
         "firebase": "7.24.0",
+        "html2canvas": "1.0.0-rc.7",
         "ionic-angular": "3.9.9",
         "ionic-selectable": "^3.5.0",
+        "ionic-tooltips": "^3.1.0",
         "ionicons": "3.0.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.25",
         "ngx-clipboard": "^10.0.0",
         "promise-polyfill": "^8.2.0",
         "rxjs": "6.3.3",
@@ -63,6 +70,8 @@
         "cordova-plugin-camera": "^5.0.3",
         "cordova-plugin-device": "^2.0.2",
         "cordova-plugin-fcm-with-dependecy-updated": "^7.8.0",
+        "cordova-plugin-file": "^6.0.2",
+        "cordova-plugin-file-opener2": "^3.0.5",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.2.1",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -99,6 +108,10 @@
             "cordova-plugin-androidx-adapter": {},
             "cordova-plugin-fcm-with-dependecy-updated": {
                 "IOS_FIREBASE_MESSAGING_VERSION": "~> 7.4.0"
+            },
+            "cordova-plugin-file": {},
+            "cordova-plugin-file-opener2": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
             }
         },
         "platforms": [
